// ========================================
// MEDI-TRACK - ESTADO ACTUAL DE LA BASE DE DATOS
// Representación exacta del esquema actual sin modificaciones
// Generado desde: database/usuarios.sql + migraciones existentes
// ========================================

// ==========================================
// SISTEMA DE ROLES Y PERMISOS
// ==========================================

Table roles {
  id int [pk, increment]
  nombre varchar(50) [unique, not null]
  descripcion text
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Roles del sistema: admin, medico, cuidador, apoderado, paciente'
}

Table permisos {
  id int [pk, increment]
  nombre varchar(50) [unique, not null]
  descripcion text
  modulo varchar(50)
  
  Note: 'Permisos específicos del sistema'
}

Table rol_permisos {
  rol_id int [ref: > roles.id]
  permiso_id int [ref: > permisos.id]
  
  indexes {
    (rol_id, permiso_id) [pk]
  }
  
  Note: 'Permisos asignados a cada rol'
}

// ==========================================
// SISTEMA DE USUARIOS
// ==========================================

Table usuarios {
  id int [pk, increment]
  nombre varchar(100) [not null]
  email varchar(100) [unique, not null]
  password varchar(255) [not null]
  telefono varchar(20)
  rol_id int [not null, ref: > roles.id]
  activo boolean [default: true]
  email_verificado boolean [default: false]
  ultimo_acceso timestamp
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Tabla central de usuarios del sistema'
}

// ==========================================
// TIPOS DE USUARIOS ESPECÍFICOS
// ==========================================

Table personal_medico {
  usuario_id int [pk, ref: - usuarios.id]
  especialidad varchar(100)
  numero_colegiatura varchar(50) [unique]
  institucion varchar(100)
  anos_experiencia int
  
  Note: 'Información específica del personal médico'
}

Table cuidadores {
  usuario_id int [pk, ref: - usuarios.id]
  certificaciones text
  experiencia_anos int
  disponibilidad_horaria varchar(100)
  tarifa_hora decimal(8,2)
  
  Note: 'Información específica de cuidadores'
}

Table apoderados {
  usuario_id int [pk, ref: - usuarios.id]
  relacion_paciente varchar(50)
  es_contacto_emergencia boolean [default: true]
  
  Note: 'Información específica de apoderados/tutores'
}

// ==========================================
// SISTEMA DE PACIENTES
// ==========================================

Table generos {
  id char(1) [pk]
  nombre varchar(20) [unique, not null]
  
  Note: 'M: Masculino, F: Femenino, O: Otro'
}

Table pacientes {
  id int [pk, increment]
  usuario_id int [ref: > usuarios.id, note: 'Opcional - paciente puede no tener cuenta']
  nombre varchar(100) [not null]
  fecha_nacimiento date
  genero_id char(1) [ref: > generos.id]
  numero_documento varchar(20) [unique]
  tipo_documento varchar(10)
  tipo_sangre varchar(10)
  altura decimal(5,2)
  direccion text
  telefono_emergencia varchar(20)
  observaciones_medicas text
  activo boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Pacientes del sistema - pueden o no tener cuenta de usuario'
}

// ==========================================
// RELACIONES ENTRE PACIENTES Y USUARIOS
// ==========================================

Table paciente_apoderados {
  paciente_id int [ref: > pacientes.id]
  apoderado_usuario_id int [ref: > apoderados.usuario_id]
  es_principal boolean [default: false]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  indexes {
    (paciente_id, apoderado_usuario_id) [pk]
  }
  
  Note: 'Un paciente puede tener múltiples apoderados'
}

Table paciente_cuidadores {
  paciente_id int [ref: > pacientes.id]
  cuidador_usuario_id int [ref: > cuidadores.usuario_id]
  fecha_asignacion date [not null]
  fecha_fin date
  activo boolean [default: true]
  
  indexes {
    (paciente_id, cuidador_usuario_id) [pk]
  }
  
  Note: 'Asignación de cuidadores a pacientes'
}

Table paciente_medicos {
  paciente_id int [ref: > pacientes.id]
  medico_usuario_id int [ref: > personal_medico.usuario_id]
  es_medico_principal boolean [default: false]
  fecha_asignacion date [not null]
  fecha_fin date
  especialidad_tratamiento varchar(100)
  
  indexes {
    (paciente_id, medico_usuario_id) [pk]
  }
  
  Note: 'Asignación de médicos a pacientes'
}

// ==========================================
// MEDICAMENTOS (ESTRUCTURA SIMPLE ACTUAL)
// ==========================================

Table medicamentos {
  id int [pk, increment]
  nombre varchar(255) [not null]
  medida varchar(255) [not null]
  unidad_medida varchar(255) [not null]
  descripcion text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  updated_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Tabla simple actual de medicamentos - será reemplazada por sistema complejo'
}

// ==========================================
// SISTEMA DE AUDITORÍA Y SESIONES
// ==========================================

Table auditoria_usuarios {
  id int [pk, increment]
  usuario_id int [ref: > usuarios.id]
  accion varchar(100) [not null]
  tabla_afectada varchar(50)
  registro_id int
  datos_anteriores json
  datos_nuevos json
  ip_address varchar(45)
  user_agent text
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  
  Note: 'Registro de acciones realizadas por usuarios'
}

Table sesiones_usuario {
  id varchar(255) [pk]
  usuario_id int [ref: > usuarios.id]
  ip_address varchar(45)
  user_agent text
  activa boolean [default: true]
  created_at timestamp [default: `CURRENT_TIMESTAMP`]
  expires_at timestamp [not null]
  
  Note: 'Gestión de sesiones activas de usuarios'
}

// ==========================================
// TABLAS ADICIONALES DE LARAVEL
// ==========================================

Table users {
  id int [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [unique, not null]
  email_verified_at timestamp
  password varchar(255) [not null]
  remember_token varchar(100)
  created_at timestamp
  updated_at timestamp
  
  Note: 'Tabla de usuarios por defecto de Laravel (puede estar en paralelo)'
}

Table cache {
  key varchar(255) [pk]
  value mediumtext [not null]
  expiration int [not null]
}

Table cache_locks {
  key varchar(255) [pk]
  owner varchar(255) [not null]
  expiration int [not null]
}

Table jobs {
  id bigint [pk, increment]
  queue varchar(255) [not null]
  payload longtext [not null]
  attempts tinyint [not null]
  reserved_at int
  available_at int [not null]
  created_at int [not null]
}

Table job_batches {
  id varchar(255) [pk]
  name varchar(255) [not null]
  total_jobs int [not null]
  pending_jobs int [not null]
  failed_jobs int [not null]
  failed_job_ids longtext [not null]
  options mediumtext
  cancelled_at int
  created_at int [not null]
  finished_at int
}

Table failed_jobs {
  id bigint [pk, increment]
  uuid varchar(255) [unique, not null]
  connection text [not null]
  queue text [not null]
  payload longtext [not null]
  exception longtext [not null]
  failed_at timestamp [default: `CURRENT_TIMESTAMP`]
}

// ==========================================
// RESUMEN DEL ESTADO ACTUAL
// ==========================================

Note: '''
ESTADO ACTUAL DE LA BASE DE DATOS:

📊 ESTRUCTURA PRINCIPAL:
- Sistema completo de usuarios con roles (admin, médico, cuidador, apoderado, paciente)
- Gestión de pacientes con relaciones a médicos, cuidadores y apoderados  
- Sistema básico de medicamentos (tabla simple)
- Auditoría completa de acciones de usuarios
- Gestión de sesiones y autenticación

🔑 RELACIONES CLAVE EXISTENTES:
- usuarios ← rol_id → roles
- pacientes → usuario_id (opcional)
- paciente_medicos: Many-to-Many entre pacientes y personal_medico
- paciente_cuidadores: Many-to-Many entre pacientes y cuidadores
- paciente_apoderados: Many-to-Many entre pacientes y apoderados

💊 MEDICAMENTOS ACTUALES:
- Tabla simple: id, nombre, medida, unidad_medida, descripcion
- Sin relaciones con tratamientos o pacientes
- Sin información farmacológica detallada
- Lista básica para uso general

🚀 LISTO PARA EVOLUCIÓN:
- Arquitectura sólida de usuarios preparada para integración
- Relaciones bien definidas entre tipos de usuarios
- Sistema de permisos implementado
- Auditoría funcionando para trazabilidad
''' 